# scjson

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  INFERENCE.md  LEGAL.md  README.md  REAME.md  TESTING.md  pytest.ini  scjson.schema.json  uber_test.py
codex/: CONTEXT-EXPANDED.md  CONTEXT.md  startup.sh
csharp/: LEGAL.md  README.md
docs/: COMPATIBILITY.md  DEV_ENV_PLAN.md  ENGINE-PY.md  ENGINE-RB.md  TODO-ENGINE-PY.md  TODO-ENGINE-RUBY.md  exec-sweep-skiplist.txt
en-US/: AGENTS.md  INFERENCE.md  LEGAL.md  README.md
es-MX/: AGENTS.md  INFERENCE.md  LEGAL.md  README.md  TESTING.md
examples/: events.json  example.scxml
fr-CA/: AGENTS.md  INFERENCE.md  LEGAL.md  README.md  TESTING.md
go/: LEGAL.md  README.md  cli_test.go  converter.go  go.mod  go.sum  main.go
java/: LEGAL.md  README.md  pom.xml  proxy-settings.xml
js/: LEGAL.md  README.md  browser.cjs  browser.mjs  converters.js  eslint.config.js  index.js  package-lock.json  package.json  scjson.schema.json  scjsonProps.ts  tsconfig.json
lua/: LEGAL.md  README.md  scjson.lua
py/: ENGINE-PY-DETAILS.md  MANIFEST.in  README.md  exec_compare.py  exec_sweep.py  gen_models.sh  gen_ts.sh  patch_scxml_forward_ref.py  pyproject.toml  requirements.txt  scion_support.py  setup.py  uber_test.py  vector_gen.py  verify_sweep.py
ruby/: ENGINE-RB-DETAILS.md  LEGAL.md  README.md  scjson.gemspec
rust/: Cargo.toml  LEGAL.md  README.md
rust/example/scjson-engine-server/: Cargo.toml
rust/example/scjson-engine-server/src/: main.rs
rust/src/: lib.rs  main.rs  scjson_props.rs
rust/tests/: cli.rs  converters.rs
(+217 files in other folders)
