cargo-features = ["edition2024"]
[package]
name = "scjson"
version = "0.1.9"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xmltree = "0.11"
thiserror = "1.0"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.9"

